--- a/src/GolfBag/wwwroot/css/variables.less
+++ b/src/GolfBag/wwwroot/css/variables.less
@@ -10,6 +10,18 @@
 @black:                 #000;
 @placeholderColor:      #919293;
 @inputBackgroundColor:  #f5f5f5;
+@white:                 #FFF;
+@sidebarHeaderColor:    #DDEEDF;
+@footerColor:           #639A67;
+
+// pie chart colors
+
+@orange:                #F45;
+@lightGreen:            #D2EA9B;
+@lightBlue:             #C0D9E5;
+@lightBrown:            #F2DEA8;
+@aqua:                  #1FAD9F;
+@darkYellow:            #FCC314;
 
 //      FONTS
 
@@ -24,6 +36,7 @@
 @bootstrapSM:   768px;
 @bootstrapMD:   992px;
 @bootstrapLG:   1200px;
+@bootstrapXL:   1450px;
 
 //      Padding to accomodate sticking header
 
